# http-tiny-rust

./: .appveyor.yml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE BSD 2-CLAUSE.md  LICENSE MIT.md  LICENSE.md  README.md  rustfmt.toml
src/: bytetraits.rs  chunked_body.rs  error.rs  header.rs  helpers.rs  io_limiter.rs  iotraits.rs  legacy_body.rs  lib.rs  limiter.rs  owned_ref.rs  parsers.rs  percent_coder.rs  query_string.rs  request_header.rs  request_target.rs  response_header.rs  sized_body.rs
src/convenience/: constants.rs  mod.rs  request.rs  response.rs
src/data/: encodings.rs  mod.rs
src/header/: builders.rs  header.rs  mod.rs
src/helpers/: io_ext.rs  iter_ext.rs  mod.rs  slice_ext.rs
tests/: data_query_string.rs  error.rs  header_parse_request.rs  header_parse_response.rs  header_read.rs  header_write_request.rs  header_write_response.rs  owned_ref.rs  percent_coder.rs
tests/helpers/: mod.rs
