[package]
name = "http_header"
edition = "2018"
version = "0.3.2"
authors = ["KizzyCode Software Labs./Keziah Biermann"]
description = "A simple, dependency-less HTTP-header builder and parser"
categories = ["data-structures", "encoding", "network-programming", "parsing", "web-programming"]
keywords = ["HTTP", "HTTP-Header", "HTTP-Request", "HTTP-Response"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/http_header"
readme = "README.md"


[badges]
travis-ci = { repository = "KizzyCode/http_header" }
appveyor = { repository = "KizzyCode/http_header" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "KizzyCode/http_header" }
is-it-maintained-issue-resolution = { repository = "KizzyCode/http_header" }


[dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true